--- a/.github/workflows/checkDuplicates.yml
+++ b/.github/workflows/checkDuplicates.yml
@@ -2,10 +2,6 @@ name: Check for Duplicates
 
 on:
   workflow_dispatch:
-  issues:
-    types: [opened]
-  pull_request:
-    types: [opened]
 
 jobs:
   check-duplicates:
@@ -22,12 +18,34 @@ jobs:
                 state: 'open',
               });
 
-              const newIssue = context.payload.issue || context.payload.pull_request;
-              const duplicate = issues.find(issue => issue.title.toLowerCase() === newIssue.title.toLowerCase());
+              const { data: pullRequests } = await github.rest.pulls.list({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                state: 'open',
+              });
 
-              if (duplicate) {
-                core.setFailed(`Duplicate found: ${duplicate.html_url}`);
+              const allItems = [...issues, ...pullRequests];
+
+              const duplicates = [];
+              for (let i = 0; i < allItems.length; i++) {
+                for (let j = i + 1; j < allItems.length; j++) {
+                  if (allItems[i].title.toLowerCase() === allItems[j].title.toLowerCase()) {
+                    duplicates.push({
+                      item1: allItems[i].html_url,
+                      item2: allItems[j].html_url
+                    });
+                  }
+                }
+              }
+
+              if (duplicates.length > 0) {
+                const duplicateMessages = duplicates.map(dup => `Duplicate found: ${dup.item1} and ${dup.item2}`).join('\n');
+                core.setFailed(duplicateMessages);
+              } else {
+                console.log('No duplicates found.');
               }
             } catch (error) {
               core.setFailed(`Error checking for duplicates: ${error.message}`);
             }
+        env:
+          GITHUB_TOKEN: ${{ secrets.AC_GH_TOKEN }}
