--- a/.github/workflows/assemble.yml
+++ b/.github/workflows/assemble.yml
@@ -49,7 +49,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: "Runner compiled Installomator.sh and Labels.txt using assemble.sh"
-        file_pattern: |
-          Installomator.sh
-          Labels.txt
-
+        file_pattern:  'Installomator.sh Labels.txt'
