--- a/.github/workflows/check-lf.yml
+++ b/.github/workflows/check-lf.yml
@@ -3,6 +3,7 @@ name: Check LF at End of PR
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 jobs:
   check-lf:
